workloads/immich/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: immich-ts-2143-https
  hostnames:
    - immich.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-only
      backendRefs:
        - name: immich
          port: 80
